--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
      <!-- Вторая секция -->
       <section class="section__content">
         <h2 class="title__section">Что снижает концентрацию внимания?</h2>
-        <div class="content__cards">
+        <div class="content__cards desktop-cards">
           <article class="card">
             <h3 class="title-decor">Многозадачность</h3>
             <p class="card__paragraph">
@@ -210,7 +210,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <div class="title">focus</div>
+      <span class="title">focus</span>
     </footer>
   </body>
 </html>   
